# LePort

./: .gitignore  README.md  pyproject.toml
docs/: aloha.md  libero.md  maniskill.md  robomimic.md  umi.md
notebooks/: aloha.ipynb  libero.ipynb  maniskill.ipynb  robomimic.ipynb  umi.ipynb
src/: __init__.py  api.py  cli.py  errors.py  maniskill_replay.py
src/conversion/: __init__.py  mapping.py  pipeline.py  plan.py
src/sources/: __init__.py  aloha.py  base.py  libero.py  maniskill.py  registry.py  robomimic.py  types.py  umi.py
src/targets/: __init__.py  lerobot.py
tests/: conftest.py  test_aloha.py  test_cli.py  test_import.py  test_libero.py  test_maniskill.py  test_maniskill_replay.py  test_merge.py  test_pipeline.py  test_plan_mapping.py  test_registry.py  test_robomimic.py  test_umi.py
